<resources>
    <string name="app_name">True Witness</string>
    <string name="Button">Emergency</string>
    <string name="Button1">Witness</string>
    <string name="TextMessage">Hello.. User Name</string>
    <string name="Emergencynumber">Emergency Num1</string>
    <string name="Emergencynumber2">Emergency Num2</string>
    <string name="Number">6824146710</string>
    <string name="Number2">4142433465</string>
    <string name="setting">Setting</string>
    <string name="Welcome_to_user">Welcome to user</string>
    <string name="witness">Witness</string>
    <string name="emergency">Emergency</string>
    <string name="todo">TODO</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
</resources>