<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="1dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded,UselessParent">

        <Button
            android:id="@+id/SettingsID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="#1CD80E"
            android:drawableTop="@drawable/setting1"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="141dp"
            android:layout_margin="30dp"
            android:text="@string/Welcome_to_user"
            android:textColor="#121213"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_witness"
            android:text="@string/witness"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/EmergencyID"
            android:layout_width="311dp"
            android:layout_height="136dp"
            android:layout_margin="20dp"
            android:background="@drawable/round_button"
            android:text="@string/emergency"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"

            />

    </LinearLayout>


</LinearLayout>